Fix video size on mobile view

--- a/src/components/services-block/services-block.scss
+++ b/src/components/services-block/services-block.scss
@@ -135,22 +135,9 @@
                 padding: 0;
 
                 video {
-                    height: 40vh;
                     background-size: cover;
                     overflow: hidden;
-                    position: absolute;
-                    right: 0;
                     border-radius: 16px;
-            
-                    @media (min-width: 450px) {
-                        height: 85vh;
-                    }
-            
-                    @media (min-width: 600px) {
-                        width: 100vw;
-                        height: auto;
-                        position: unset;
-                    }
                 }
             }
         }
